--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,604 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+/*                     */
+/*                     */
+/* GENERIC CSS CLASS   */
+/*                     */
+/*                     */
+
+.special_rope {
+  height: 200px;
+  width: 180px;
+  left: 10%;
+  top: -100px;
+  position: absolute;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.publication-generic-css-characs {
+  height: 300px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.5s ease-in-out;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.publication-generic-css-characs:hover {
+  cursor: pointer;
+}
+
+.wave {
+  display: inline-block;
+  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s;        /* Change to speed up or slow down */
+  animation-iteration-count: infinite;  /* Never stop waving :) */
+  transform-origin: 70% 70%;
+}
+
+@keyframes wave-animation {
+  0% { transform: rotate( 0.0deg) }
+  10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+  20% { transform: rotate(-8.0deg) }
+  30% { transform: rotate(14.0deg) }
+  40% { transform: rotate(-4.0deg) }
+  50% { transform: rotate(10.0deg) }
+  60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+  100% { transform: rotate( 0.0deg) }
+}
+
+.floating {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 30px;
+    margin-top: 5px;
+}
+
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }
+}
+
+/*                     */
+/*                     */
+/* PARENT CSS CLASS   */
+/*                     */
+/*                     */
+
+.core_wallpaper {
+  background: linear-gradient(180deg, #F8F2FF 0%, rgba(250, 250, 250, 0) 100%);
+  backdrop-filter: blur(250px);
+  display: flex;
+  top: -10px;
+  position: absolute;
+  flex-direction: column;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.core_top {
+  width: 100%;
+  height: 100%;
+  top: -10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.core_body {
+  display: flex;
+  flex-direction: row;
+  overflow-x: hidden;
+  width: 100%;
+  height: 50%;
+}
+
+.core_footer {
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.core_body_bottom_section {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10%;
+}
+
+/*                     */
+/*                     */
+/* CHILD TOP CSS CLASS */
+/*                     */
+/*                     */
+
+.top_left_corner {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  padding-top: 20px;
+  padding-left: 10%;
+}
+
+.top_left_corner_persona_information {
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  align-items: center;
+}
+
+.top_left_corner_title {
+  font-family: 'Poppins', serif;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 30px;
+  display: flex;
+  height: auto;
+  width: auto;
+  margin-right: 30px;
+  transition: 0.8s ease-in-out;
+}
+
+.top_left_corner_title:hover {
+  color: #ae48ff;
+  cursor: pointer;
+}
+
+.top_left_corner_tag {
+  z-index: 100;
+  position: relative;
+  border-radius: 179px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 18px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 30px;
+  background-color: #f4ecff;
+}
+
+.top_left_corner_tag_title {
+  text-align: center;
+  vertical-align: top;
+  font-size: 12px;
+  font-family: 'Poppins', serif;
+  color: #ae48ff;
+}
+
+.top_right_corner {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  justify-content: flex-end;
+  padding-top: 50px;
+  padding-right: 10%;
+}
+
+.top_right_corner_socials {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+
+  height: 50px;
+  width: auto;
+}
+
+.top_right_corner_social_img_medium {
+  height: 34px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.top_right_corner_social_img_medium:hover {
+  cursor: pointer;
+  height: 38px;
+  width: 55px;
+}
+
+.top_right_corner_social_img_github {
+  height: 34px;
+  width: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.top_right_corner_social_img_github:hover {
+  cursor: pointer;
+  height: 38px;
+  width: 38px;
+}
+
+.top_right_corner_social_img_linkedin {
+  height: 34px;
+  width: 40px;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.top_right_corner_social_img_linkedin:hover {
+  cursor: pointer;
+  height: 38px;
+  width: 44px;
+}
+
+/*                     */
+/*                     */
+/* BODY LEFT CSS CLASS */
+/*                     */
+/*                     */
+
+.body_left_side {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: 10%;
+}
+
+.body_left_side_description {
+  display: flex;
+  flex-direction: column;
+  padding-top: 50px;
+}
+
+
+.body_left_side_description_title {
+  text-align: left;
+  vertical-align: top;
+  font-size: 50px;
+  font-family: 'Poppins', serif;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 70%;
+  color: #25323c;
+  transition: 0.8s ease-in-out;
+}
+
+.body_left_side_description_title:hover {
+  color: #ae48ff;
+  cursor: pointer;
+}
+
+.body_left_side_description_content {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+  padding-right: 10%;
+  padding-left: 10px;
+}
+
+.body_left_side_description_content_text {
+  text-align: justify;
+  vertical-align: top;
+  font-size: 15px;
+  font-family: Roboto, serif;
+  letter-spacing: 1.5px;
+  line-height: 150%;
+  color: #5D87A8;
+}
+
+.body_left_side_description_sub_content {
+  display: flex;
+  flex-direction: row;
+}
+
+.body_left_side_description_sub_content_text {
+  width: 50%;
+  text-align: left;
+  vertical-align: top;
+  font-size: 14px;
+  font-family: Roboto, serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5D87A8;
+  display: inline;
+}
+
+.body_left_side_description_sub_content_text:hover {
+  cursor: pointer;
+}
+
+.body_left_side_separator {
+  margin-left: 10px;
+}
+
+.body_left_side_name {
+  text-align: left;
+  vertical-align: top;
+  font-size: 13px;
+  font-family: Roboto, serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5D87A8;
+  margin-bottom: -15px;
+}
+
+.body_left_side_email {
+  text-align: left;
+  vertical-align: top;
+  font-size: 13px;
+  font-family: Roboto, serif;
+  letter-spacing: 1.5px;
+  font-weight: bold;
+  line-height: 140%;
+  color: #ae48ff;
+}
+
+.body_left_side_email:hover {
+  cursor: pointer;
+}
+
+.body_left_side_coloured_text_no_wrap {
+  text-align: left;
+  vertical-align: top;
+  font-size: 14px;
+  font-family: Roboto, serif;
+  font-weight: bolder;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #ae48ff;
+  display: inline;
+}
+
+/*                      */
+/*                      */
+/* BODY RIGHT CSS CLASS */
+/*                      */
+/*                      */
+
+.body_right_side {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+}
+
+.body_right_side_card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-right: 10%;
+}
+
+.body_right_side_card_content {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-right: 100px;
+
+  border-radius: 13px;
+  height: 300px;
+  width: 350px;
+  background-color: #ffffff;
+  box-shadow: 0 40px 30px rgba(25, 25, 46, 0.06);
+}
+
+.body_right_side_card_content_profile_picture {
+  height: 120px;
+  width: 120px;
+}
+
+.body_right_side_card_content_profile_picture img {
+  object-fit: contain;
+  border-radius: 62px;
+  height: 100%;
+  width: 100%;
+}
+
+.body_right_side_card_content_profile_picture_ellipse {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: -15px;
+  width: 96px;
+  height: 25px;
+
+  background: linear-gradient(135deg, #FF26B2 0%, #851BD9 80%, #3F0FFF 100%);
+  opacity: 0.8;
+  box-shadow: 0 5px 20px rgba(250, 118, 96, 0.2);
+  border-radius: 66px;
+}
+
+.body_right_side_card_content_profile_picture_ellipse_title {
+  text-align: center;
+  vertical-align: top;
+  font-size: 11px;
+  font-family: Roboto, serif;
+
+  color: #ffffff;
+}
+
+.body_right_side_card_content_profile_picture_name {
+  text-align: center;
+  vertical-align: top;
+  font-size: 16px;
+  font-family: Roboto, serif;
+
+  color: #25323c;
+}
+
+.body_right_side_card_content_profile_picture_location {
+  text-align: left;
+  vertical-align: top;
+  font-size: 14px;
+  margin-top: -15px;
+  font-family: Roboto, serif;
+
+  color: #859fb3;
+}
+
+
+/*                      */
+/*                      */
+/* BODY BOTTOM CSS CLASS*/
+/*                      */
+/*                      */
+
+
+.body_bottom_title {
+  text-align: left;
+  vertical-align: top;
+  font-size: 16px;
+  font-family: Roboto, serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5D87A8;
+}
+
+.body_bottom_content {
+  display: flex;
+  flex-direction: row;
+  padding-top: 50px;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.body_bottom_content::-webkit-scrollbar {
+  display: none;
+}
+
+/*                      */
+/*                      */
+/* FOOTER CSS CLASS     */
+/*                      */
+/*                      */
+
+.footer_content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background: #E7EFF4;
+  height: 100%;
+}
+
+.footer_copyright_text {
+  text-align: left;
+  vertical-align: top;
+  font-size: 12px;
+  font-family: 'Poppins', serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5d86a7;
+}
+
+.footer_remerciements {
+  text-align: center;
+  vertical-align: top;
+  font-size: 8px;
+  font-family: 'Poppins', serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5d86a7;
+}
+
+.footer_email {
+  text-align: right;
+  vertical-align: top;
+  font-size: 12px;
+  font-family: 'Poppins', serif;
+  letter-spacing: 1.5px;
+  line-height: 140%;
+  color: #5d86a7;
+  margin-bottom: -5px;
+}
+
+.footer_logo-linkedin {
+  height: 15px;
+  width: 15px;
+}
+
+.footer_img-4 {
+  height: 22px;
+  width: 25px;
+}
+
+.footer_img-5 {
+  height: 17px;
+  width: 17px;
+}
+
+.footer_socials {
+  display: flex;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+
+  height: 50px;
+  width: auto;
+}
+
+.footer_social_img_medium {
+  height: 26px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.footer_social_img_medium:hover {
+  height: 30px;
+  width: 45px;
+}
+
+.footer_social_img_github {
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.footer_social_img_github:hover {
+  height: 28px;
+  width: 28px;
+}
+
+.footer_social_img_linkedin {
+  height: 26px;
+  width: 32px;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  transition: 0.1s ease-in-out;
+}
+
+.footer_social_img_linkedin:hover {
+  height: 30px;
+  width: 36px;
 }
